styles/test-style.css
* {
    box-sizing: border-box;
}

.not-visible {
    display: none;
}

.rock-img {
    background-image: url('../img/rock.jpg');
    background-repeat: no-repeat;
    background-size: 400px 300px ;
    background-position: center;
    
}

.paper-img {
    background-image: url('../img/paper.jpg');
    background-repeat: no-repeat;
    background-size: 400px 300px;
    background-position: center;
}

.scissors-img {
    background-image: url('../img/scissors.jpg');
    background-repeat: no-repeat;
    background-size: 400px 300px;
    background-position: center;
}

html {
    outline: none;
    height: 100vh;
    background-image: linear-gradient(to bottom right, rgba(55, 0, 255, 0.89), rgba(81, 237, 239, 0.9));
    font-family: 'Roboto Slab', serif; 
}

body {
    height: inherit;
}

header {
    height: 15vh;
    text-align: center;
    overflow: hidden;
}

header h1 {
    font-family: 'Oswald', sans-serif;
    font-size: 2.5rem;
    font-weight: 700;
    color: white;
    letter-spacing: 0.2rem;
}

.game {
    height: 75vh;
}

.game-panel {
    /*border: 0.18rem dotted black;*/
    height: 45vh;
}

.begin {
    position: relative;
    overflow: hidden;
    height: 45vh;
    background-color: rgba(0, 0, 0, 0.4);
    
}

.begin span {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    font-size: 1.6rem;
}

.score-table {
    text-align: center;
    height: 5vh;
}

.selections {
    height: 30vh;
}

#player-selection {
    float: left;
    width: 40vw;
    height: 25vh;
}

#computer-selection {
    float: right;
    width: 40vw;
    height: 25vh;
}

.results {
    position: relative;
    height: 10vh;
    padding-top: 2vh;
}

#round-result {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.controls {
    height: 30vh;
    padding-top: 4vh;
    overflow: auto;
}

.controls>div {
    display: inline-block;
    padding: 2em;
    border: 2px solid white;
    border-radius: 12px;
}

#user-controls {
    position: relative;
    left: 6vw;
    float: left;
    min-width: 20vw;
    max-width: 35vw;
    max-height: 25vh;
    text-align: center;
}

#computer-controls {
    position: relative;
    float: right;
    right: 6vw;
    min-width: 20vw;
    max-width: 35vw;
    max-height: 25vh;
    text-align: center;
}

#user-controls span, #computer-controls span {
    display: block;
    padding-bottom: 2em;   
}

.rock, .paper, .scissors {
    padding: .6em;
    width: 6em;
    color: white;
    background-color: rgba(0,0,0,0.5);
    font-weight: bold;
    text-align: center;
    text-decoration: none;
    border: .16em solid black;
    font-size: .9em;
    cursor: pointer;
}

.rock:hover, .paper:hover, .scissors:hover {
    -moz-transition-duration: 0.3s;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    background-color: rgba(0, 0, 0, 0.8);
    border: .2em solid white;
}

footer {
    position: relative;
    height: 10vh;
    overflow: hidden;
    border-top: .1rem solid rgba(0, 0, 0, 0.6);
    
}

footer a {
    position: absolute;
    left: 1vw;;
    bottom: 1vh;
    text-decoration: none;
    color: black;
    font-family: 'Indie Flower', cursive;
    font-size: 1.45rem;
    letter-spacing: .09rem;
} 

footer span:hover {
    text-decoration: underline;
    font-weight: 900;
}

footer a:visited {
    color: white;
    
}

